@@ -1,5 +1,8 @@
 2002-01-28  Bradford Hovinen  <hovinen@ximian.com>
 
+	* mime-edit-dialog.c (populate_application_list): Use
+	gnome_vfs_application_registry_get_applications
+
 	* mime-type-info.c (mime_type_info_using_custom_app) 
 	(mime_category_info_using_custom_app): Implement
 
